--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -23,9 +23,10 @@ jobs:
         # 32-bit architecture required for libusb to connect properly
 
     - name: Install dependencies
+      # Numpy-locked 1.23.5 on 2023-9-28, beyond this crashes in 32-bit python for Windows 7
       run: |
         ## pip install . establishes meerk40t as a package in pip, so that meerk40t-barcodes can find it as a dependency
-        pip install .
+        pip install numpy==1.23.5
         pip install pyusb
         pip install wheel
         pip install potracer
@@ -35,12 +36,15 @@ jobs:
         pip install pyserial
         pip install bitarray
         pip install scipy
+        pip install .
         pip install meerk40t-camera opencv-python-headless==4.5.3.56
         pip install meerk40t-barcodes
 
     - name: pip list
       run: |
           pip list
+
+    
 
 # Compile bootloaders in order to reduce virus totals
 # PYTHONHASHSEED is an attempt to get deterministic builds for VirusTotal
