--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-2019, macos-11]
-        python-version: [3.9]
+        python-version: [3.8, 3.12]
 
     steps:
 
