--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -36,6 +36,8 @@ jobs:
         pip install pyserial
         pip install bitarray
         pip install scipy
+        pip install pypotrace-windows
+        pip install pyclipr
         pip install .
         pip install meerk40t-camera opencv-python-headless==4.5.3.56
         pip install meerk40t-barcodes
