--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -51,7 +51,7 @@ jobs:
         mv meerk40t/external_plugins.py meerk40t/external_plugins.unused
         mv meerk40t/external_plugins_build.py meerk40t/external_plugins.py
         pyinstaller .github/workflows/linux/meerk40t.spec
-        mv dist/meerk40t dist/MeerK40t-Ubuntu-Latest
+        mv dist/MeerK40t dist/MeerK40t-Ubuntu-Latest
         mv mk40t.py meerk40t.py
         mv meerk40t/external_plugins.py meerk40t/external_plugins_build.py
         mv meerk40t/external_plugins.unused meerk40t/external_plugins.py
