--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -24,6 +24,7 @@ jobs:
         sudo apt install libgtk-3-dev cmake libeigen3-dev
         sudo apt install libagg-dev libpotrace-dev
         python3 -m pip install --upgrade pip
+        pip cache purge
         pip install pyinstaller wheel
         pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04 wxPython
         pip install numpy==1.23.5
