--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         sudo apt install libgtk-3-dev cmake libeigen3-dev
         sudo apt install libagg-dev libpotrace-dev
+        sudo apt install python3.12-dev
         python3 -m pip install --upgrade pip
         pip cache purge
         pip install pyinstaller wheel
