--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -21,6 +21,7 @@ jobs:
         python-version: 3.12
     - name: Install dependencies
       run: |
+        sudo apt update
         sudo apt install libgtk-3-dev cmake libeigen3-dev
         sudo apt install libagg-dev libpotrace-dev
         sudo apt install python3.12-dev
