--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -15,17 +15,19 @@ jobs:
     steps:
     - name: Checkout meerk40t
       uses: actions/checkout@v4
-    - name: Set up Python 3.12
+    - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
-        python-version: 3.12
+        python-version: 3.10
     - name: Install dependencies
       run: |
         sudo apt install libgtk-3-dev cmake libeigen3-dev
         sudo apt install libagg-dev libpotrace-dev
+        sudo apt install python3.10-dev
         python3 -m ensurepip --upgrade
         python3 -m pip install --upgrade pip
         pip cache purge
+        pip install setuptools
         pip install pyinstaller wheel
         pip install numpy==1.26.4
         pip install pyusb
