--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 # These owners will be the default owners for everything in the repo.
 # Unless a later match takes precedence,
-* @tatarize
+* jpirnay
 # will be requested for review when someone opens a pull request.
 # If you want to add more owners just add them above
