--- a/.github/workflows/win64.yml
+++ b/.github/workflows/win64.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         ## pip install . establishes meerk40t as a package in pip, so that meerk40t-barcodes can find it as a dependency
-        pip install numpy
+        pip install numpy<=1.26.4
         pip install pyusb
         pip install wheel
         pip install potracer
@@ -35,7 +35,7 @@ jobs:
         pip install ezdxf
         pip install pyserial
         pip install bitarray
-        pip install scipy
+        pip install scipy<=1.12.0
         pip install pypotrace-windows
         pip install pyclipr
         pip install numba
