--- a/.github/workflows/win64.yml
+++ b/.github/workflows/win64.yml
@@ -25,24 +25,10 @@ jobs:
     - name: Install dependencies
       run: |
         ## pip install . establishes meerk40t as a package in pip, so that meerk40t-barcodes can find it as a dependency
-        pip install numpy<=1.26.4
-        pip install pyusb
-        pip install wheel
-        pip install potracer
-        pip install pypotrace-windows
-        pip install pillow==9.5.0
-        pip install wxPython
-        pip install ezdxf
-        pip install pyserial
-        pip install bitarray
-        pip install scipy<=1.12.0
-        pip install pypotrace-windows
-        pip install pyclipr
-        pip install numba
+        pip install -r requirements.txt
+        pip install -r requirements-optional.txt
         pip install .
-        pip install meerk40t-camera opencv-python-headless==4.5.3.56
         pip install meerk40t-barcodes
-
     - name: pip list
       run: |
           pip list
@@ -57,13 +43,16 @@ jobs:
       run: |
         git clone --depth=1 https://github.com/pyinstaller/pyinstaller
         cd pyinstaller/bootloader
-        python3 ./waf distclean all --target-arch=32bit
+        python3 ./waf distclean all --target-arch=64bit
         cd ..
         pip3 install .
         cd ..
 
     - name: Build MeerK40t
       run: |
+        # Just for the sake of completeness install regular and optional libraries
+        pip install -r requirements.txt
+        pip install -r requirements-optional.txt
         ## pyinstaller struggles recognizing and including imports that are dynamic (such as for the plugins)
         ## So for build purposes, we replace the dynamic imports with the static listing that we include in builds
         cd meerk40t
