--- a/.github/workflows/win64.yml
+++ b/.github/workflows/win64.yml
@@ -27,6 +27,7 @@ jobs:
         ## pip install . establishes meerk40t as a package in pip, so that meerk40t-barcodes can find it as a dependency
         pip install -r requirements.txt
         pip install -r requirements-optional.txt
+        pip install opencv-python-headless<=4.8.1.78
         pip install .
         pip install meerk40t-barcodes
     - name: pip list
