--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -53,3 +53,5 @@ jobs:
         exempt-pr-assignees: 'jpirnay'
         exempt-issue-labels: 'dont-close'
         exempt-pr-labels: 'dont-close'
+        start-date: '2024-10-01'
+        
