--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - uses: actions/stale@v5
       with:
-        debug-only: true
+        debug-only: false
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         stale-issue-message: |
           This issue is stale because it has been open 180 days with no activity.
