--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
 
         {
-            "name": "Python Debugger: Current File",
+            "name": "Python Debugger: Run MeerK40t",
             "type": "debugpy",
             "request": "launch",
             "program": "meerk40t.py",
